@@ -5,6 +5,9 @@ Version 1.8.2
        not saved. (Stefan)
 - BUG: Issue #526: branch/tag fails to
        tag externals. (Stefan)
+- BUG: Issue #527: Commands in log dialog fail
+       if started for an url instead of a
+       working copy path. (Stefan)
 
 Version 1.8.1
 - BUG: Issue #481: wrong parameter when
